build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/user/Documents/GitHub/2022RapidReact/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling DriveDistance.cpp successful.

compiling DriveToWall.cpp successful.

compiling BallTransferStateMgr.cpp failed.
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\states\BallTransfer\BallTransferStateMgr.cpp: In member function 'virtual void BallTransferStateMgr::CheckForStateTransition()':
C:\Users\user\Documents\GitHub\2022RapidReact\src\main\cpp\states\BallTransfer\BallTransferStateMgr.cpp:64:96: error: 'LIFT' is not a member of 'TeleopControl::FUNCTION_IDENTIFIER'
             auto liftPressed = controller->IsButtonPressed(TeleopControl::FUNCTION_IDENTIFIER::LIFT);
                                                                                                ^~~~

compiling PrimitiveFactory.cpp successful.

compiling DragonVision.cpp successful.

compiling Robot.cpp successful.

compiling ResetPosition.cpp successful.

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/user/Documents/GitHub/2022RapidReact/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
